// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header with class renders correctly 1`] = `
<header
  className="header my-class"
>
  <h3
    className="introduction__subhead"
  >
    My subhead
  </h3>
  <h2
    className="introduction__headline"
  >
    My headline
  </h2>
</header>
`;

exports[`Header without class renders correctly 1`] = `
<header
  className="header "
>
  <h3
    className="introduction__subhead"
  >
    My subhead
  </h3>
  <h2
    className="introduction__headline"
  >
    My headline
  </h2>
</header>
`;
